# mnemo

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
articles/: mnemo-mcp-python-extension.md
mnemo/: __init__.py  install.py
mnemo/connectors/: __init__.py  server.py
mnemo/hooks/: __init__.py  session_start.py
mnemo/memory/: __init__.py  server.py
mnemo/testing/: __init__.py  server.py
