[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemokit"
version = "0.1.0"
description = "MCP toolkit for Claude Code agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Mika", email = "kzk1998713@gmail.com" },
]
keywords = ["mcp", "claude", "ai", "agent", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
]

[project.urls]
Homepage = "https://github.com/mnemokit-dev/mnemo"
Repository = "https://github.com/mnemokit-dev/mnemo"
Issues = "https://github.com/mnemokit-dev/mnemo/issues"
PyPI = "https://pypi.org/project/mnemokit/"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
mnemo-memory = "mnemo.memory.server:main"
mnemo-connectors = "mnemo.connectors.server:main"
mnemo-testing = "mnemo.testing.server:main"
mnemo-setup = "mnemo.install:main"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
